--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>web-modules测试页面</title>
-	<script src="https://cdn.bootcss.com/jquery/3.5.0/jquery.js"></script>
+	<title>纯粹的web</title>
+	<link rel="stylesheet" href="./styles.css">
 	<script src="./main.js"></script>
 </head>
 <body>
-<textarea id="text"></textarea>
-	<button onclick="handleClick()">点击</button>
-	<div id="app"></div>
+	<h1>web开发 - 文艺复兴</h1>
+	<blockquote>使用HTML、CSS、Javascript编写，不依赖任何框架，探究web发展进程</blockquote>
 </body>
 </html>
-<script type="application/javascript">
-const mode = getComputedStyle(document.documentElement).getPropertyValue('--mode').trim();
-alert(mode);
-</script>
+
