首页添加导航

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
 	<h1>web开发 - 文艺复兴</h1>
 	<blockquote>使用HTML、CSS、Javascript编写，不依赖任何框架，探究web发展进程</blockquote>
+	<ul>
+		<li><a href="./cases/01-can-import-usable.html">import能用了吗</a></li>
+		<li><a href="./cases/02-xss-inject.html">XSS注入的实现</a></li>
+		<li><a href="./cases/03-css-variables-light-dark.html">暗黑模式的测试</a></li>
+	</ul>
 </body>
 </html>
 
