暗黑模式研究

--- a/cases/03-css-variables-light-dark.html
+++ b/cases/03-css-variables-light-dark.html
@@ -11,6 +11,9 @@
 <body>
 <h1>暗黑模式的研究</h1>
 <h2>其实也是css变量的研究</h2>
+<a href="javascript:;">链接样式测试</a>
+<img src="" alt="图片测试">
+<div style="height: 100px; width: 100px">div测试</div>
 <script type="application/javascript">
 const mode = getComputedStyle(document.documentElement).getPropertyValue('--mode').trim();
 alert(mode);
