--- a/cases/02-xss-inject.html
+++ b/cases/02-xss-inject.html
@@ -3,9 +3,11 @@
 <head>
     <title></title>
     <script src="https://cdn.bootcss.com/jquery/3.5.0/jquery.js"></script>
-    <script src="./02-xss-inject.js"></script>
 </head>
 <body>
+注入代码示例：
+<pre id="code1"></pre>
+<pre id="code2"></pre>
 <div>
     <textarea id="by_innerHTML" placeholder="使用innerHTML插入页面"></textarea>
     <button onclick="handleClick('by_innerHTML')">插入</button>
@@ -18,6 +20,7 @@
     <button onclick="handleClick('by_jquery')">插入</button>
 </div>
 <div id="app"></div>
+<script src="./02-xss-inject.js"></script>
 </body>
 </html>
 
