--- a/cases/01-can-import-usable.html
+++ b/cases/01-can-import-usable.html
@@ -6,14 +6,33 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>web-modules测试页面</title>
-    <script src="./01-can-import-usable.js"></script>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.0/styles/default.min.css">
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.0/highlight.min.js"></script>
+    <script src="./01-can-import-usable.js" type="module"></script>
 </head>
 <body>
 <h1>可以浏览器用import了吗？</h1>
-<h2>应该还不行</h2>
-<h2>未完待续.............</h2>
+<del><h2>应该还不行</h2></del>
 <p>
     Uncaught SyntaxError: Cannot use import statement outside a module
 </p>
+
+<h2>2020.5.27更新：</h2>
+<h2>是可以的，在script标签中需要设定type="module"即可</h2>
+<pre>
+    <code class="html">
+&lt;script src="./01-can-import-usable.js" type="module"&gt;&lt;/script&gt;
+    </code>
+</pre>
+
+<h2>未完待续.............</h2>
+<script>
+document.addEventListener('DOMContentLoaded', (event) => {
+    document.querySelectorAll('pre code').forEach((block) => {
+        hljs.highlightBlock(block);
+    });
+});
+</script>
 </body>
+
 </html>
