--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<li><a href="./cases/01-can-import-usable.html">import能用了吗</a></li>
 		<li><a href="./cases/02-xss-inject.html">XSS注入的实现</a></li>
 		<li><a href="./cases/03-css-variables-light-dark.html">暗黑模式的测试</a></li>
+		<li><a href="./cases/04-ajax.html">axios ajax测试</a></li>
+		<li><a href="./cases/05-upload-cos.html">上传腾讯云cos测试</a></li>
 	</ul>
 </body>
 </html>
